More code clean-up and changes: • Organized the controllers, view models, and templates with directories to group them by area • Changed the routes to match the new structure • Moved the dialog ID "tagging" to the creation promise call to reduce the number of lines

--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,8 @@ Sample-App/bin
 Sample-App/bld
 
 # Generated TypeScript artifacts
-Sample-App/app/*.js
-Sample-App/app/*.js.map
-Sample-App/app/*/*.js
-Sample-App/app/*/*.js.map
+Sample-App/app/**/*.js
+Sample-App/app/**/*.js.map
 
 # Local nu-get packages
 packages/*/
