Web links from About view now open system browser; fixes #16

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ Sample-App/platforms
 
 # Generated TypeScript artifacts
 Sample-App/www/scripts/appBundle.*
+Sample-App/jsFileList.json
 
 # Local nu-get packages
 packages/*/
