--- a/Sample-App/chrome-manifest.json
+++ b/Sample-App/chrome-manifest.json
@@ -11,6 +11,7 @@
         "default_title": "Sample App"
     },
     "permissions": [
-        "https://ajax.googleapis.com/"
+        "https://ajax.googleapis.com/",
+        "clipboardWrite"
     ]
 }
